--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: ^1.1.0
   provider: ^6.1.1
   pull_to_refresh: ^2.0.0
+  socket_io_client: ^2.0.0-beta.4-nullsafety.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
